// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table images {
  id                  int      [pk, increment]
  filename            text     [unique, not null]
  format              text     [not null]

  // original
  original            text     [unique, not null]
  width_original      int      [not null]
  height_original     int      [not null]

  // big size image
  jpeg                text     [unique, not null]
  webp                text     [unique, not null]
  width               int      [not null]
  height              int      [not null]

  // middle size image
  jpeg_middle         text     [unique, not null]
  webp_middle         text     [unique, not null]
  width_middle        int      [not null]
  height_middle       int      [not null]

  // small size image
  jpeg_small          text     [unique, not null]
  webp_small          text     [unique, not null]
  width_small         int      [not null]
  height_small        int      [not null]

  cover               boolean  [default: false]
  mark                text
  alt                 text
}

Table articles {
  id                 int     [pk, increment]
  title              text    [unique, not null]
  url                text    [unique, not null]
  url_old            text    [unique]
  meta_keywords      text
  meta_description   text
  published          boolean [default: false]
  serial_number      int     [not null]
  content            jsonb   [default: '[]']
  image_id           int     [ref: > images.id]
}


Table products {
  id                    int      [pk, increment]
  title                 text     [unique, not null]
  price                 numeric  [note: "nullable, precision: 50, scale: 2"]
  size_x                int
  size_y                int
  size_z                int
  description           jsonb    [default: '[]']
  diameter              int
  material              text
  manufacturer          text
  meta_keywords         text
  meta_description      text
  url                   text     [unique, not null]
  url_old               text     [unique]
  published             boolean  [default: false]
  store_category_id     int      [ref: > store_categories.id]
}


Table image_to_product {
  id             int     [pk, increment]
  serial_number  int     [not null]
  image_id       int     [ref: > images.id]
  product_id     int     [ref: > products.id]
}

Table store_categories {
  id                 int     [pk, increment]
  title              text    [unique, not null]
  type               text    [not null, note: "enum: 'sections' | 'products' | 'url'"]
  url                text    [unique, not null]
  url_old            text    [unique]
  meta_keywords      text
  meta_description   text
  description        jsonb   [default: '[]']
  published          boolean [default: false]
  serial_number      int     [not null]
  parent_id          int     [ref: > store_categories.id, note: "Tree parent"]
  image_id           int     [ref: > images.id]
}

Table groups {
  id                 int     [pk, increment]
  title              text    [not null]
  auto_price         boolean [default: false]
  sum                numeric [note: "nullable, precision: 50, scale: 2"]
  description        jsonb   [default: '[]']
  price              boolean [default: false]
  published          boolean [default: false]
  store_category_id  int     [ref: > store_categories.id]
}

Table group_items {
  id            int     [pk, increment]
  serial_number int     [not null]
  product_id    int     [ref: > products.id]
  group_id      int     [ref: > groups.id]
}

Table image_to_group {
  id            int     [pk, increment]
  serial_number int     [not null]
  image_id      int     [ref: > images.id]
  group_id      int     [ref: > groups.id]
}

Table gallery_categories {
  id                 int     [pk, increment]
  title              text    [unique, not null]
  url                text    [unique, not null]
  url_old            text    [unique]
  meta_keywords      text
  meta_description   text
  published          boolean [default: false]
  serial_number      int     [not null]
}

Table image_to_gallery {
  id            int     [pk, increment]
  serial_number int     [not null]
  image_id      int     [ref: > images.id]
  gallery_id    int     [ref: > gallery_categories.id]
}

Table orders {
  id            int      [pk, increment]
  address       text     [note: "nullable"]
  date_start    datetime [not null]
  date_end      datetime [note: "nullable"]
  description   text     [note: "nullable"]
  closed        boolean  [default: false]
  user_id       int      [ref: > users.id]
}

Table order_items {
  id             int     [pk, increment]
  title          text    [not null]
  sum            numeric [default: 0, note: "precision: 50, scale: 2"]
  amount         int     [default: 1]
  serial_number  int     [not null]
  order_id       int     [ref: > orders.id]
  product_id     int     [ref: > products.id]
  group_id       int     [ref: > groups.id]
}

Table users {
  id              int    [pk, increment]
  user_name       text   [not null]
  user_surname    text   [not null]
  user_patronymic text   [note: "nullable"]
  phone_number    text   [not null]
}

